fixed hover on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -404,6 +404,23 @@ p {
 	height: 150px;
 	}
 
+	.card div{
+		bottom: 109%;
+	}
+
+	.card h2{
+		font-size: 1.5rem;
+	}
+	.card p{
+		font-size: 0.8rem;
+	}
+
+	.card:hover div hr{
+		width: 100px
+	}
+
+
+
 	.mobileNavBar{
 		position: absolute;
 	}
@@ -455,6 +472,23 @@ p {
 	height: 150px;
 	}
 
+
+	.card div{
+		bottom: 109%;
+	}
+
+	.card h2{
+		font-size: 1.5rem;
+	}
+	.card p{
+		font-size: 0.8rem;
+	}
+
+	
+
+	.card:hover div hr{
+		width: 100px
+	}
 	.mobileNavBar{
 		position: absolute;
 	}
@@ -504,6 +538,21 @@ p {
 	.card img {
 	width: 300px;
 	height: 150px;
+	}
+
+	.card div{
+		bottom: 109%;
+	}
+
+	.card h2{
+		font-size: 1.5rem;
+	}
+	.card p{
+		font-size: 0.8rem;
+	}
+
+	.card:hover div hr{
+		width: 100px
 	}
 
 	.mobileNavBar{
@@ -556,6 +605,22 @@ p {
 	width: 300px;
 	height: 150px;
 	}
+
+	.card div{
+		bottom: 109%;
+	}
+
+	.card h2{
+		font-size: 1.5rem;
+	}
+	.card p{
+		font-size: 0.8rem;
+	}
+
+	.card:hover div hr{
+		width: 100px
+	}
+
 
 	.mobileNavBar{
 		position: absolute;
